# my-opengl-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildrun.sh  opengl_engine.vcxproj
include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  glad.c  main.cpp  object.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp
